<resources>
    <string name="app_name">Luca\'s Restaurants</string>
    <string name="btnRegistrar">REGISTRAR PEDIDO</string>
    <string name="btnConsulta">CONSULTAR HORAS</string>
    <string name="title_activity_mensagem">MensagemActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="iniciar">Iniciar</string>
    <string name="parar">Parar</string>
    <string name="zerar">Zerar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="novo_produto">Novo</string>
    <string name="atualizar_produto">Atualizar</string>
    <string name="preencher_email">Enviar e-mail fornecedor</string>
    <string name="endereco_fornecedor">E-mail fornecedor</string>
    <string name="hint_endereco_fornecedor">Digite o endereço de email</string>
    <string name="nome_produto">Produto</string>
    <string name="hint_nome_produto">Digite o nome do produto em falta</string>
    <string name="qtd_produto">Quantidade</string>
    <string name="hint_quantidade">Digite a quantidade</string>
    <string name="enviar_email">Enviar</string>


</resources>