<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CronometroActivity">

    <include
        android:id="@+id/include"
        layout="@layout/activity_cabecalho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <TextView
        android:id="@+id/txtTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="56sp"
        app:layout_constraintBottom_toTopOf="@+id/btnParar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClickIniciar"
        android:text="@string/iniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnParar"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/btnParar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="136dp"
        android:onClick="onClickParar"
        android:text="@string/parar"
        app:layout_constraintEnd_toStartOf="@+id/btnIniciar"
        app:layout_constraintStart_toEndOf="@+id/btnZerar"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/btnZerar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:onClick="onClickZerar"
        android:text="@string/zerar"
        app:layout_constraintEnd_toStartOf="@+id/btnParar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

</androidx.constraintlayout.widget.ConstraintLayout>